fix/linebreaks in strapi content

--- a/src/components/Post/style.scss
+++ b/src/components/Post/style.scss
@@ -15,7 +15,7 @@
             width:100%;
             height: 450px;
             object-fit: cover;
-            object-position: top;
+            //object-position: top;
             @media( max-width: 426px ) {
                 height: 300px;
             }
